# docs/swagger.json
@@ -4,60 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/getTesting": {
-            "post": {
-                "description": "Testing method get post delete update",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Testing"
-                ],
-                "summary": "Testing",
-                "parameters": [
-                    {
-                        "description": "Request Body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Testing"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Testing"
-                        }
-                    }
-                }
-            }
-        },
-        "/healthCheck": {
-            "get": {
-                "description": "Checks the health of the server",
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "Health Check"
-                ],
-                "summary": "Health Check",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/users": {
             "get": {
                 "description": "Get all users",
@@ -92,7 +38,8 @@
                             }
                         }
                     }
-                }
+                },
+                "x-order": 1
             },
             "post": {
                 "description": "Create users",
@@ -113,7 +60,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.CreateUser"
                         }
                     }
                 ],
@@ -135,12 +82,93 @@
                             }
                         }
                     }
-                }
+                },
+                "x-order": 3
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "description": "Get Users By Key",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get Users By Key",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                },
+                                "status": {
+                                    "type": "integer"
+                                }
+                            }
+                        }
+                    }
+                },
+                "x-order": 2
+            },
+            "delete": {
+                "description": "Delete Users By Key",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Delete Users By Key",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                },
+                                "status": {
+                                    "type": "integer"
+                                }
+                            }
+                        }
+                    }
+                },
+                "x-order": 4
             }
         }
     },
     "definitions": {
-        "models.Testing": {
+        "models.CreateUser": {
             "type": "object",
             "required": [
                 "email",
@@ -150,9 +178,6 @@
                 "email": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "username": {
                     "type": "string"
                 }
@@ -160,6 +185,10 @@
         },
         "models.User": {
             "type": "object",
+            "required": [
+                "email",
+                "username"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
