# internal/models/models.go
@@ -1,7 +1,0 @@
-package models
-
-type Testing struct {
-    ID    int `json:"id" `
-	Username string `json:"username" binding:"required"`
-	Email string `json:"email" binding:"required"`
-}
