# internal/models/user_model.go
@@ -1,7 +1,12 @@
 package models
 
 type User struct {
-	ID       uint  `json:"id" gorm:"column:ID;type:int4;"`
-	Username string `json:"username" gorm:"column:Username"`
-	Email    string `json:"email" gorm:"column:Email"`
+	ID       uint  `json:"id" gorm:"primary_key;auto_increment;column:ID;type:int4"`
+	Username string `json:"username" gorm:"column:Username" binding:"required"`
+	Email    string `json:"email" gorm:"column:Email" binding:"required"`
+}
+
+type CreateUser struct {
+	Username string `json:"username" binding:"required"`
+	Email    string `json:"email" binding:"required"`
 }
